<resources>
    <string name="app_name">news</string>
    <string name="action_settings">Settings</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_array_adapter">ArrayAdapter</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="btn_start_service">启动</string>
    <string name="btn_stop_service">停止</string>
    <string name="get_btn_status">获取状态</string>
    <string name="btn_send">发送消息</string>
    <string name="btn_print">打印信息</string>
    <string name="btn_intent">测试Intent</string>
    <string name="btn_active_list">获取列表</string>
    <string name="btn_active_web">启动Web</string>
    <string name="btn_active_offline">启动Offline</string>
    <string name="title_activity_offline">OfflineActivity</string>

</resources>
